--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ winit = "0.26.1"
 skia-safe = "0"
 raw-window-handle = "0.4.2"
 skia-bindings = "0.50.0"
+cgmath = "0.18.0"
 [dependencies.windows]
 version = "0.37.0"
 features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
