--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,23 @@ name = "ruitachi"
 version = "0.0.1"
 edition = "2021"
 
+[features]
+default=["wayland"]
+windows=["dep:windows"]
+wayland=["dep:wayland-client", "dep:wayland-protocols", "dep:tempfile"]
+
 [dependencies]
 winit = "0.26.1"
 skia-safe = "0"
 raw-window-handle = "0.4.2"
 skia-bindings = "0.50.0"
 cgmath = "0.18.0"
+wayland-client = { version = "0.29.5", optional = true }
+tempfile = { version = "3.3.0", optional = true }
+wayland-protocols = { version = "0.29.5", optional = true }
+memmap2 = "0.5.8"
+
 [dependencies.windows]
+optional = true
 version = "0.37.0"
 features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"]
