--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ wayland-client = { version = "0.29.5", optional = true }
 tempfile = { version = "3.3.0", optional = true }
 wayland-protocols = { version = "0.29.5", optional = true }
 memmap2 = "0.5.8"
+rand = "0.8.5"
 
 [dependencies.windows]
 optional = true
