--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 
 [features]
-default=["wayland"]
+default=["windows"]
 windows=["dep:windows"]
 wayland=["dep:wayland-client", "dep:wayland-protocols", "dep:tempfile"]
 
