--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,21 @@ version = "0.0.1"
 edition = "2021"
 
 [features]
-default=["wayland"]
+default=["windows"]
 windows=["dep:windows"]
 wayland=["dep:wayland-client", "dep:wayland-protocols", "dep:tempfile"]
 
 [dependencies]
 winit = "0.27.5"
 skia-safe = "0"
-raw-window-handle = "0.4.2"
 skia-bindings = "0.50.0"
+raw-window-handle = "0.4.2"
 cgmath = "0.18.0"
-wayland-client = { version = "0.29.5", optional = true }
-tempfile = { version = "3.3.0", optional = true }
-wayland-protocols = { version = "0.29.5", optional = true }
-memmap2 = "0.5.8"
 rand = "0.8.5"
+memmap2 = "0.5.8"
+tempfile = { version = "3.3.0", optional = true }
+wayland-client = { version = "0.29.5", optional = true }
+wayland-protocols = { version = "0.29.5", optional = true }
 
 [dependencies.windows]
 optional = true
