--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 
 [features]
-default=["windows"]
+default=["wayland"]
 windows=["dep:windows"]
 wayland=["dep:wayland-client", "dep:wayland-protocols", "dep:tempfile"]
 
@@ -15,6 +15,7 @@ skia-bindings = "0.50.0"
 raw-window-handle = "0.4.2"
 cgmath = "0.18.0"
 rand = "0.8.5"
+send_wrapper = "0.6.0"
 memmap2 = "0.5.8"
 tempfile = { version = "3.3.0", optional = true }
 wayland-client = { version = "0.29.5", optional = true }
